# introduction_to_cmake

./: .clang-format  presentation.tex
doc/: presentation.tex
example/no_solution/1-hello_world/: hello_world.cpp
example/no_solution/2-student/: CMakeLists.txt  test.cpp
example/no_solution/3-student_lib/: CMakeLists.txt
example/no_solution/3-student_lib/src/: Student_v1.cpp
example/no_solution/4-use_student_lib/: test.cpp
example/solution/1-hello_world/: CMakeLists.txt
example/solution/2-student/: CMakeLists.txt
example/solution/3-student_lib/: CMakeLists.txt
example/solution/4-use_student_lib/: CMakeLists.txt
exercises/02-student/src/: Student.cpp
exercises/03-student_lib/src/: Student_v1.hpp  Student_v2.cpp
solutions/03-student_lib/src/: Student_v2.hpp
solutions/04-use_student_lib/: CMakeLists.txt
